--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
     "expo-splash-screen": "~0.29.15",
+    "expo-sqlite": "^15.1.4",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.5",
